Closed
Bug 903327
Opened 12 years ago
Closed 12 years ago
Multiple selection dropdown listboxes are too small
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(firefox22 unaffected, firefox23 unaffected, firefox24 unaffected, firefox25+ verified, firefox26+ verified, fennec25+)
VERIFIED
FIXED
Firefox 26
| Tracking | Status | |
|---|---|---|
| firefox22 | --- | unaffected |
| firefox23 | --- | unaffected |
| firefox24 | --- | unaffected |
| firefox25 | + | verified |
| firefox26 | + | verified |
| fennec | 25+ | --- |
People
(Reporter: u421692, Assigned: wesj)
References
()
Details
(Keywords: regression)
Attachments
(3 files)
|
127.47 KB,
image/png
|
Details | |
|
102.27 KB,
image/png
|
Details | |
|
892 bytes,
patch
|
kats
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Environment:
Device: LG Nexus 4(Android 4.2.2)/HTC Desire HD(Android 2.3.5)
Build: Nightly 26.0a1(2013-08-08)/Aurora 25.0a2(2013-08-08)
Steps to reproduce:
1. Go to bugzilla.mozilla.org
2. Tap on "Advanced Search" tab
3. Observe the multiple selection listboxes
Expected result:
The multiple selection listboxes are sized correctly and have straight corners.(see attached screenshot)
Actual result:
The multiple selection listboxes are small and have rounded corners.(see attached screenshot)
Note:
It might be that the specification were changed, but I didn't find the bug related to this change.
Comment 3•12 years ago
|
||
(In reply to Aaron Train [:aaronmt] from comment #2)
> font-inflation issue?
Hm, I don't know about the rendering differences (i.e. the rounded vs. straight corners), but I'll look and see if something changed between the two versions that might have affected font inflation calculations.
Changing font size does not influence the size of the list boxes.
Updated•12 years ago
|
Comment 5•12 years ago
|
||
The regression window is:
mozilla-central
good build: 22.07.2013
bad build: 22.07.2013
-pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2268ff80683a&tochange=e3c19a339b36
We can not go deeper in inbound because there are no available builds for that time. However we can only guess that this Bug 896138 is the bug that caused the regression.
Updated•12 years ago
|
Keywords: regressionwindow-wanted
I'm skeptical about that regression range, and would be interested in seeing a range down to the changeset (which would be useful even if it is that bug).
Keywords: regressionwindow-wanted
After the changes on "https://bugzilla.mozilla.org/" the issue is not reproducing on this site on any Firefox build.
However, I was able to reproduce this issue on "http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_select_multiple".
The regression window is:
mozilla-central
good build: 04.07.2013
bad build: 05.07.2013
-pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=dcbbfcdf7bb4&tochange=17fe59f6c54a
Keywords: regressionwindow-wanted
I will start a hg bisect on this, since there are no builds in the inbound folder for that time.
| Reporter | ||
Comment 10•12 years ago
|
||
The first bad revision is:
changeset: 137443:efa23d6bd3fa
user: Kartikaya Gupta <kgupta@mozilla.com>
date: Thu Jul 04 09:02:29 2013 -0400
summary: Bug 803207 - Kill GetDevicePixelsPerMetaViewportPixel and use widget scaling correctly on Fennec. r=mbrubeck
inbound pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=1947e3caa654&tochange=efa23d6bd3fa
It seems that Bug 803207 caused this issue.
Comment 11•12 years ago
|
||
I believe this has to do with the default styling we have for form elements in Fennec. On my Nexus 4, the following page looks different on Beta and in Aurora: http://people.mozilla.org/~kgupta/bug/903327.html
On Beta the two buttons are the same size but on Aurora they are not. If I change layout.css.devPixelsPerPx to 1.0 on the Aurora build (the default is 2.0 on the Nexus 4) then the buttons render the same size.
Based on this I believe the default styling we apply to form elements (and perhaps other parts of the page) are specified in CSS pixels, and so when bug 803207 landed and changed the default value of devPixelsPerPx on hi-dpi devices, it affected how large the form elements are rendered as.
I took a quick look at Fennec's content.css but didn't see which CSS properties might be affecting this. Wesj, do you know where our form elements pick up default properties regarding font size from?
Flags: needinfo?(kbrosnan) → needinfo?(wjohnston)
| Assignee | ||
Comment 12•12 years ago
|
||
I don't think this font-size is specified in CSS. It comes from the eCSSUnit_System_Font keyword. I'll have to dig more to see where that's set for us.
Flags: needinfo?(wjohnston)
| Assignee | ||
Comment 13•12 years ago
|
||
Attachment #803172 -
Flags: review?(bugmail.mozilla)
Updated•12 years ago
|
Attachment #803172 -
Flags: review?(bugmail.mozilla) → review+
| Assignee | ||
Comment 14•12 years ago
|
||
| Assignee | ||
Comment 15•12 years ago
|
||
Comment on attachment 803172 [details] [diff] [review]
Patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 803207. We're correcting something that should have been done in bug 674373, but wasn't noticed until we made some later changes.
User impact if declined: Text fields using strange font sizes
Testing completed (on m-c, etc.): Landed on mc today. Tested locally on test pages.
Risk to taking this patch (and alternatives if risky): Low risk. Will change rendering of textboxes (hopefully to match their old display). I cant think of any alternatives. Back out the dev pixels change?
String or IDL/UUID changes made by this patch: None.
Attachment #803172 -
Flags: approval-mozilla-aurora?
Comment 17•12 years ago
|
||
Assignee: nobody → wjohnston
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 26
Updated•12 years ago
|
Updated•12 years ago
|
Attachment #803172 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Assignee | ||
Comment 18•12 years ago
|
||
| Reporter | ||
Comment 19•12 years ago
|
||
Verified as fixed on:
Device: LG Nexus 4 (Android 4.2.2)
Build: Nightly 26.0a1 (2013-09-16) / Aurora 25.0a2 (2013-09-16)
Comment 20•12 years ago
|
||
Comment on attachment 803172 [details] [diff] [review]
Patch
Review of attachment 803172 [details] [diff] [review]:
-----------------------------------------------------------------
::: widget/android/nsLookAndFeel.cpp
@@ +452,5 @@
> aFontName.AssignLiteral("\"Droid Sans\"");
> aFontStyle.style = NS_FONT_STYLE_NORMAL;
> aFontStyle.weight = NS_FONT_WEIGHT_NORMAL;
> aFontStyle.stretch = NS_FONT_STRETCH_NORMAL;
> + aFontStyle.size = 9.0 * 96.0f / 72.0f * aDevPixPerCSSPixel;
The number of magic numbers makes me sad.
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•