Bug 903327 - Use device pixels per css pixel when calculating default font sizes. r=kats, a=akeybl