widget/android/nsLookAndFeel.cpp
@@ -454,7 +454,7 @@ nsLookAndFeel::GetFontImpl(FontID aID, nsString& aFontName,
     aFontStyle.style = NS_FONT_STYLE_NORMAL;
     aFontStyle.weight = NS_FONT_WEIGHT_NORMAL;
     aFontStyle.stretch = NS_FONT_STRETCH_NORMAL;
-    aFontStyle.size = 9.0 * 96.0f / 72.0f;
+    aFontStyle.size = 9.0 * 96.0f / 72.0f * aDevPixPerCSSPixel;
     aFontStyle.systemFont = true;
     return true;
 }
